- added a fix for the black-roads bug in San Andreas textures to TxdGen - added the "improveFiltering" flag to TxdGen so textures can be made to use linear filtering - fixed some bugs in the DXT decompression logic - fixed some bugs in the raw bitmap output of D3D textures - added filtering mode and addressing mode error checking - added filtering mode fixes to all texture platforms - various bug fixes and improvements - fixed the output of working San Andreas textures - added mipmap generation - added debug dump of texture mipmap layers using the "outputDebug" property
version 0.9 is ready!

--- a/ps2 export tool/modded_vendor/rwtools-master/rwtools/rwtools.vcproj
+++ b/ps2 export tool/modded_vendor/rwtools-master/rwtools/rwtools.vcproj
@@ -201,6 +201,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\txdread.common.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\src\txdread.d3d.dxt.hxx"
 				>
 			</File>
