--- a/ps2 export tool/releases/txdgen.ini
+++ b/ps2 export tool/releases/txdgen.ini
@@ -3,6 +3,12 @@ gameRoot=txdgen_in/
 outputRoot=txdgen_out/
 targetVersion=SA
 targetPlatform=PS2
+clearMipmaps=false
+generateMipmaps=false
+mipGenMode=default
+mipGenMaxLevel=6
+mipGenSafe=true
+improveFiltering=true
 compressTextures=true
 compressionQuality=1.0
 palRuntimeType=PNGQUANT
