- added mipmap modification API to native textures - added texture information API to native textures - reimplemented debug output system - added per-mipmap conversion API - generalized the mipmap debug output system - reimplemented the RenderWare object version update system + made it more robust (WIP) - reimplemented bitmap fetch from RenderWare textures - stabilized the XBOX and Direct3D native texture targets (now they always store valid texture data)
For next revisions:
- fix the PS2 version update (it should update on SetEngineVersion)
- add the Direct3D 8/9 platform switch back to NativeTextureD3D (it is a mistake to have the platforms in one native texture anyway)
- reimplement the compression + low-end optimization system
- reimplement the mipmap generation + clear system

--- a/ps2 export tool/modded_vendor/rwtools-master/rwtools/rwtools.vcproj
+++ b/ps2 export tool/modded_vendor/rwtools-master/rwtools/rwtools.vcproj
@@ -237,6 +237,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\txdread.miputil.hxx"
+				>
+			</File>
+			<File
 				RelativePath="..\src\txdread.palette.hxx"
 				>
 			</File>
@@ -359,6 +363,10 @@
 		</File>
 		<File
 			RelativePath="..\src\txdread.d3d.dxt.cpp"
+			>
+		</File>
+		<File
+			RelativePath="..\src\txdread.debugutil.cpp"
 			>
 		</File>
 		<File
