- reimplemented Direct3D platform update through native interface API - added native interface API which can be used to skip the RenderWare layer to directly access the metal - stabilized the PS2 texture implementation; it has reached final status.

--- a/ps2 export tool/modded_vendor/rwtools-master/rwtools/rwtools.vcproj
+++ b/ps2 export tool/modded_vendor/rwtools-master/rwtools/rwtools.vcproj
@@ -193,6 +193,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\include\renderware.txd.d3d.h"
+				>
+			</File>
+			<File
 				RelativePath="..\include\renderware.txd.h"
 				>
 			</File>
