- added generic extension block storage so that extensions are preserved for all RenderWare objects

--- a/ps2 export tool/releases/txdgen.ini
+++ b/ps2 export tool/releases/txdgen.ini
@@ -18,3 +18,4 @@ reconstructIMGArchives=false
 fixIncompatibleRasters=true
 dxtPackedDecompression=false
 imgArchivesCompressed=false
+ignoreSerializationRegions=true
