--- a/ps2 export tool/modded_vendor/rwtools-master/rwtools/rwtools.vcproj
+++ b/ps2 export tool/modded_vendor/rwtools-master/rwtools/rwtools.vcproj
@@ -342,6 +342,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\src\rwobjextensions.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\src\rwserialize.cpp"
 			>
 		</File>
