- added read-write locks to the NativeExecutive library - restructured NativeExecutive, so it is plugin-based now - added conditional struct support to DynamicTypeSystem - when running with multi-threading support, Lua will now lock table access properly - removed two of the three type hacks from the Lua header (LUA_TDEADKEY remains) - set up the ground for the new "runtime" Lua type that will represent a native OS thread - fixed many interlocking problems inside of the Lua core based on Table value addresses that caused deadlocks (read-write-lock) - fixed a typo in the TxdGen readme :-) - many awesome things, part of which are yet to come!

--- a/NativeExecutive/vs2013/NativeExecutive.vcxproj
+++ b/NativeExecutive/vs2013/NativeExecutive.vcxproj
@@ -88,16 +88,19 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="..\CExecutiveManager.fiber.cpp" />
+    <ClCompile Include="..\CExecutiveManager.rwlock.cpp" />
     <ClCompile Include="..\CExecutiveManager.task.cpp" />
     <ClCompile Include="..\CExecutiveManager.thread.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\CExecutiveManager.fiber.h" />
     <ClInclude Include="..\CExecutiveManager.h" />
+    <ClInclude Include="..\CExecutiveManager.rwlock.h" />
     <ClInclude Include="..\CExecutiveManager.task.h" />
     <ClInclude Include="..\CExecutiveManager.thread.h" />
     <ClInclude Include="..\CommonUtils.h" />
     <ClInclude Include="..\internal\CExecutiveManager.internal.h" />
+    <ClInclude Include="..\internal\CExecutiveManager.rwlock.internal.h" />
     <ClInclude Include="..\StdInc.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
